auth: work in progress

--- a/src/app/components/ui/Header/index.module.scss
+++ b/src/app/components/ui/Header/index.module.scss
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
   &_item {
     width: fit-content;
     height: fit-content;
