--- a/src/app/components/ui/Footer/index.module.scss
+++ b/src/app/components/ui/Footer/index.module.scss
@@ -4,6 +4,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+  flex-wrap: wrap;
   background-color: rgb(69, 69, 69);
   &_item {
     width: fit-content;
