--- a/src/app/components/ui/Footer/index.module.scss
+++ b/src/app/components/ui/Footer/index.module.scss
@@ -1,5 +1,8 @@
 .navbar {
+  width: 100%;
   height: 10%;
+  position: fixed;
+  bottom: 0;
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
