--- a/src/app/components/layout/Auth/index.module.scss
+++ b/src/app/components/layout/Auth/index.module.scss
@@ -1,9 +1,21 @@
 .auth_container {
-  width: inherit;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 100px;
+  &__login {
+    width: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    height: inherit;
+  }
+  &__register {
+    width: inherit;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 100px;
+    height: 100%;
+    padding-bottom: 10%;
+  }
 }
 
 .form_container {
@@ -28,6 +40,24 @@
       margin-right: 40px;
     }
   }
+  &_check {
+    line-height: 35px;
+    & input {
+      appearance: none;
+      width: 15px;
+      height: 15px;
+      outline: 3px solid rgba(69, 69, 69, 0.75);
+      border-radius: 2px;
+      background-clip: content-box;
+      margin-right: 5px;
+      &:checked {
+        background-color: rgb(255, 224, 177);
+      }
+    }
+    &:nth-of-type(2n+1) {
+      margin-bottom: 55px;
+    }
+  }
   &__button_submit {
     width: 100%;
     background-color: rgb(69, 69, 69);
@@ -47,6 +77,9 @@
     line-height: 45px;
     p a {
       text-decoration: none;
+      &:visited {
+        color: rgba(69, 69, 69, 0.75);
+      }
       &:active {
         color: rgb(253, 182, 75);
       }
