--- a/src/app/components/layout/Auth/index.module.scss
+++ b/src/app/components/layout/Auth/index.module.scss
@@ -1,13 +1,5 @@
 .auth_container {
-  &__login {
-    width: inherit;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 100px;
-    height: inherit;
-  }
-  &__register {
+  &__login, &__register {
     width: inherit;
     display: flex;
     justify-content: center;
@@ -39,7 +31,7 @@
     label {
       margin-right: 40px;
     }
-    div span {
+    div pre {
       display: inline-block;
       color: rgb(199, 89, 111);
       font-size: 16px;
@@ -61,13 +53,13 @@
         background-color: rgb(255, 224, 177);
       }
     }
-    div span {
+    div pre {
       display: inline-block;
       color: rgb(199, 89, 111);
       font-size: 16px;
       padding: 15px 0 0;
     }
-    &:nth-of-type(2n+1) {
+    &:nth-of-type(2n) {
       margin-bottom: 55px;
     }
   }
